@@ -1,4 +1,7 @@
 1.1beta8:
+
+ - remember different default values in different forms
+ - create triggers from items
  - a separate poller for unreachable hosts
  - timeout-immune poller
  - autodiscovery: http://www.zabbix.com/forum/showthread.php?t=2137
